[tool.poetry]
name = "radiacode"
version = "0.3.4"
description = "Library for RadiaCode-10x"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdump/radiacode"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "radiacode" },
    { include = "radiacode_examples" }
]

[tool.poetry.dependencies]
python = "^3.9"
bluepy = { version = "^1.3", markers = "sys_platform != 'darwin'" }
pyusb = "^1.2"
aiohttp = {version = "^3.9", optional = true}
prometheus-client = {version = "^0.19", optional = true}
matplotlib = {version = "^3.7", optional = true}
numpy = {version = "^1.26", optional = true}
pyyaml = {version = "^6.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1"
mypy = "^1.7"

[tool.poetry.extras]
examples = ["aiohttp", "prometheus-client", "matplotlib", "numpy", "pyyaml"]

[tool.poetry.scripts]
radiacode_basic = "radiacode_examples.basic:main"
radiacode_exporter = "radiacode_examples.radiacode_exporter:main"
radiacode_show_spectrum = "radiacode_examples.show_spectrum:main"
radiacode_webserver = "radiacode_examples.webserver:main"
radiacode_webserver_logger = "radiacode_examples.webserver_logger:main"
radiacode_narodmon = "radiacode_examples.narodmon:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["B", "Q"]
line-length = 130
target-version = "py310"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]