[tool.poetry]
name = "radiacode"
version = "0.3.5"
description = "Library for RadiaCode-101"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdump/radiacode"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
include = ["radiacode-examples/*"]

[tool.poetry.dependencies]
python = "^3.9"
bluepy = { version = "^1.3", markers = "sys_platform == 'linux'" }
pyusb = "^1.3"
aiohttp = {version = "^3.9", optional = true}
prometheus-client = {version = "^0.19", optional = true}
matplotlib = {version = "^3.7", optional = true}
numpy = {version = "^1.26", optional = true}
pyyaml = {version = "^6.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
mypy = "^1.15"

[tool.poetry.extras]
examples = ["aiohttp", "prometheus-client", "matplotlib", "numpy", "pyyaml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
