[project]
name = "radiacode"
version = "0.3.5"
description = "Library for RadiaCode-101"
authors = [{ name = "Maxim Andreev", email = "andreevmaxim@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "bluepy~=1.3 ; sys_platform == 'linux'",
    "pyusb~=1.3",
]

[project.optional-dependencies]
examples = [
    "aiohttp~=3.9",
    "prometheus-client>=0.19,<0.20",
    "matplotlib~=3.7",
    "numpy~=1.26",
    "pyyaml~=6.0",
]

[project.urls]
Repository = "https://github.com/cdump/radiacode"

[dependency-groups]
dev = [
    "ruff>=0.11,<0.12",
    "mypy~=1.16",
]

[tool.hatch.build.targets.sdist]
include = ["radiacode-examples/*"]

[tool.hatch.build.targets.wheel]
include = ["radiacode-examples/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
